controller button: fix text align

--- a/client/styles/views/controller.scss
+++ b/client/styles/views/controller.scss
@@ -90,3 +90,18 @@ color:black;
 .gray:active { 
 
 }
+
+#js-showItemsView {
+	height:3.75em;
+	font-size:0.8em;
+}
+#js-showPairsView {
+	height:3.75em;
+	font-size:0.8em;
+
+}
+#js-showPlatformsView {
+	height:3.75em;
+	font-size:0.8em;
+
+}
